# reddit-wallpapers

./: .editorconfig  .gitignore  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  unocss.config.ts  vite.config.ts
.github/workflows/: build_tauri.yml  main.yml
src/: auto-imports.d.ts  components.d.ts  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: client.rs  lib.rs  main.rs  string_serializer.rs  wallpaper_manager.rs
src/components/: utility_bar.vue  wallpaper.vue
src/layouts/: default.vue
src/logic/: post_mock.ts
src/pages/: [...all].vue  config.vue  index.vue
src/styles/: main.css
