[package]
name = "reddit-wallpapers"
version = "0.1.0"
description = "Reddit Wallpapers"
authors = ["Sebastian "]
repository = "https://github.com/Septias/reddit-wallpapers"
default-run = "reddit-wallpapers"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1.1", features = ["api-all", "devtools"] }
reqwest = { version = "^0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
log = "*"
json = "*"
futures-util = "*"
toml = "*"
wallpaper = {git="https://github.com/andr35/wallpaper.rs.git"}
env_logger = "*"
thiserror = "*"
image = "*"
anyhow = "*"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
