[package]
name = "reddit-wallpapers"
version = "0.1.2"
description = "Reddit Wallpapers"
authors = ["Sebastian"]
repository = "https://github.com/Septias/reddit-wallpapers"
default-run = "reddit-wallpapers"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["devtools", "protocol-asset"] }
reqwest = { version = "^0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["macros", "default"] }
log = "0.4"
json = "0.12"
futures-util = "0.3"
toml = "0.7"
wallpaper = {git="https://github.com/reujab/wallpaper.rs.git", rev="2f9d87aaaae1f6b7acf3bb852860d2eaa5bfdd7b"}
env_logger = "0.10"
thiserror = "1.0"
image = "0.24"
anyhow = "1.0"
tauri-plugin-positioner = "1.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
